--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "com_port": "/dev/ttyACM0",
+    "com_port": "\\\\.\\COM8",
     "files.associations": {
         "aseba_node.h": "c",
         "parameter.h": "c",
