--- a/.gitignore
+++ b/.gitignore
@@ -17,4 +17,4 @@ e-puck2_main-processor/
 .DS_Store
 
 # Windows specific files but always use if another user can work under Windows
-Thumbs.db
+Thumbs.dbST 
