--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ build/
 .DS_Store
 
 # Windows specific files but always use if another user can work under Windows
-Thumbs.db
+Thumbs.dbe-puck2_main-processor 
