--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "BMP launch to main",
             "cwd": "${workspaceRoot}/src",
-            "executable": "${workspaceRoot}/src/build/Noisy.elf",
+            "executable": "${workspaceRoot}/src/build/GuardBot.elf",
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "bmp",
@@ -23,7 +23,7 @@
         {
             "name": "BMP launch to reset (PC=0)",
             "cwd": "${workspaceRoot}/src",
-            "executable": "${workspaceRoot}/src/build/Noisy.elf",
+            "executable": "${workspaceRoot}/src/build/GuardBot.elf",
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "bmp",
