- Corrected some bugs and polished code - Moves too randomly, need better alg

--- a/src/makefile
+++ b/src/makefile
@@ -14,6 +14,7 @@ CSRC += ./main.c \
 		./communications.c \
 		./fft.c \
 		./pickup.c \
+		./vadrouille.c \
 
 #Header folders to include
 INCDIR += 
