--- a/src/makefile
+++ b/src/makefile
@@ -11,6 +11,7 @@ GLOBAL_PATH = ../e-puck2_main-processor
 #Source files to include
 CSRC += ./main.c \
 		./audio_processing.c \
+		./image_processing.c \
 		./pickup.c \
 		./surveillance.c \
 		./vadrouille.c \
